--- a/pbl/index.html
+++ b/pbl/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Tech Navbar</title>
+    <title>QuantumShield: The Cyber Awareness Portal🛡</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <nav>
         <div class="nav-container">
-            <a class="nav-logo">TechShield</a>
+            <a class="nav-logo">Awareness Portal</a>
             
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
+                <li class="home"><a href="#home">Home</a></li>
                 <li><a href="#keyshield">KeyShield</a></li>
                 <li><a href="#breachcheck">BreachCheck</a></li>
                 <li><a href="#virtuvview">VirtuView</a></li>
@@ -22,8 +22,15 @@
         </div>
     </nav>
 
+    <div>
+        <section id="home">
+ 
+        </section>
+    </div>
     <!-- Add our PBL content here -->
     
     <script src="script.js"></script>
 </body>
 </html>
+
+
